# Sonex

./: .gitignore  api-endpoints.md  docker-compose.yml  readme.md
Make-An-Audio/: .gitignore  Dockerfile.api  api.py  requirements.txt
StyleTTS2/: Dockerfile.api  api.py
seed-vc/: Dockerfile.api  api.py  main.py  pyproject.toml
