[project]
name = "seed-vc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "boto3>=1.40.24",
    "descript-audio-codec==1.0.0",
    "einops==0.8.0",
    "fastapi>=0.116.1",
    "freesimplegui==5.1.1",
    "funasr==1.1.5",
    "gradio==4.44.0",
    "huggingface-hub==0.23.4",
    "jiwer==3.0.3",
    "librosa==0.10.2",
    "modelscope==1.18.1",
    "munch==4.0.0",
    "numpy==1.26.4",
    "pydub==0.25.1",
    "python-dotenv>=1.1.1",
    "pyyaml>=6.0.2",
    "resemblyzer>=0.1.4",
    "scipy==1.13.1",
    "sounddevice==0.5.0",
    "soundfile==0.12.1",
    "torch==2.4.0",
    "torchaudio==2.4.0",
    "torchvision==0.19.0",
    "transformers==4.46.3",
    "uvicorn>=0.35.0",
]
